Fixed todo / getting there JS

--- a/my second website - wedding/index.html
+++ b/my second website - wedding/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans+Condensed:300|Tangerine" rel="stylesheet">
 </head>
-<body>
+<body class = "index">
     <div class="match">
         <h1>It's a match!</h1>
     </div>
