Fixed background image

--- a/my second website - wedding/where.html
+++ b/my second website - wedding/where.html
@@ -7,7 +7,7 @@
 </head>
 
 
-<body>
+<body class = "index">
 <nav>
     <ul class="topnav" id="dropdownclick">
         <li><a href="index.html">Home</a></li>
