--- a/my second website - wedding/contactus.html
+++ b/my second website - wedding/contactus.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans+Condensed:300|Tangerine" rel="stylesheet">
     <script type=text/javascript src="Scripts.js"></script>
 </head>
-<body>
+<body class = "index">
 <nav>
     <ul class="topnav" id="dropdownclick">
         <li><a href="index.html">Home</a></li>
