--- a/my second website - wedding/photos.html
+++ b/my second website - wedding/photos.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans+Condensed:300|Tangerine" rel="stylesheet">
 </head>
 
-<body>
+<body class = "photoBackground">
     
     <nav>
         <ul class="topnav" id="dropdownclick">
