fixed final nav links

--- a/my second website - wedding/RSVP.html
+++ b/my second website - wedding/RSVP.html
@@ -13,9 +13,9 @@
         <li><a href="#When">When</a></li>
         <li><a href="where.html">Where</a></li>
         <li><a href="#Accommodation">Accommodation</a></li>
-        <li><a href="#Photos">Photos</a></li>
+        <li><a href="photos.html">Photos</a></li>
         <li class="topnav-right"><a href="contactus.html">Contact Us</a></li>
-        <li class="topnav-right"><a href="#RSVP">RSVP</a></li>
+        <li class="topnav-right"><a href="RSVP.html">RSVP</a></li>
         <li class="dropdownIcon"><a href="javascript: void(0);" onclick="dropdownMenu()">&#9776;</a></li>
     </ul>
 </nav>  
